2004-04-13  Theodore A. Roth  <troth@openavr.org>
[Contributed by Bob Paddock <bpaddock@csonline.net>]

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iotn2313.h: New file.

2004-04-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: Cosmetics: update (C) year, remove some
	vestiges of trailing whitespace.

2004-04-06  Theodore A. Roth  <troth@openavr.org>

	* include/avr/iom169.h: Update copyright year.
	Fixes for bug #8452.
	(OCR1A): Fix register name.
	(OCR1B): Ditto.
	(UCSRA): Ditto.
	(UCSRB): Ditto.
	(UCSRC): Ditto.
	(UBRR): Ditto.
	(UDR): Ditto.
	(PG5): Remove define.
	(ADHSM): Ditto.
	(WDCE): Fix bit name.
	(ISC01, ISC00): Define for EICRA register.

2004-04-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: Add items for "clock skew detected", why
	are interrupt bits cleared by a `1', and why are programmed
	fuse bits at logical 0.

2004-04-06  Theodore A. Roth  <troth@openavr.org>

	* include/avr/iomx8.h (ADC): Fix to make it 16 bit.
	(ADCW): Ditto.

2004-04-06  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iom168.h: New file.
	* include/avr/iom48.h: New file.
	* include/avr/iom88.h: New file.
	* include/avr/iomx8.h: New file.

2004-04-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/main_page.dox, faq.dox: Add reference to Bruce Lightner's
	trickery page for programming small AVRs in C.

2004-04-05  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* libc/stdio/vfscanf.c: Rename set_bit and bit_is_set to avoid name
	space clash.
	Add parentheses when checking flags to quell a compiler warning.

2004-03-22  Theodore A. Roth  <troth@openavr.org>
[Thanks to Tim Lapawa <lapawa@insynergie.de>]

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/io43u32x.h (TICIE1): Fix value.
	* include/avr/io43u35x.h (TICIE1): Fix value.

2004-03-08  Theodore A. Roth  <troth@openavr.org>
